scripts/Users/14/3/175/compile.err
HiLoAutograderTest.java:1: error: illegal character: \65279
﻿import java.util.Random;
^
HiLoAutograderTest.java:1: error: class, interface, or enum expected
﻿import java.util.Random;
        ^
2 errors
